// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should be able to apply a suffix or be icon sized 1`] = `
<div
  className="md-inline-block md-avatar md-avatar--blue"
>
  <div
    className="md-avatar-content"
    style={undefined}
  >
    D
  </div>
</div>
`;

exports[`Avatar should be able to apply a suffix or be icon sized 2`] = `
<div
  className="md-inline-block md-avatar md-avatar--default md-avatar--icon-sized"
>
  <div
    className="md-avatar-content"
    style={undefined}
  >
    D
  </div>
</div>
`;

exports[`Avatar should be able to render an icon or a letter 1`] = `
<div
  className="md-inline-block md-avatar md-avatar--default"
>
  <div
    className="md-avatar-content"
    style={undefined}
  >
    <i
      className="md-icon material-icons"
      style={undefined}
    >
      home
    </i>
  </div>
</div>
`;

exports[`Avatar should be able to render an icon or a letter 2`] = `
<div
  className="md-inline-block md-avatar md-avatar--default"
>
  <div
    className="md-avatar-content"
    style={undefined}
  >
    <svg
      aria-labelledby={null}
      className="md-icon"
      focusable="false"
      role="img"
      style={undefined}
      title={undefined}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#some-tag"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar should be able to render an icon or a letter 3`] = `
<div
  className="md-inline-block md-avatar md-avatar--default"
>
  <div
    className="md-avatar-content"
    style={undefined}
  >
    <svg
      aria-labelledby={null}
      className="md-icon"
      focusable="false"
      role="img"
      style={undefined}
      title={undefined}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="jfkdsfsd"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar should be able to render an icon or a letter 4`] = `
<div
  className="md-inline-block md-avatar md-avatar--default"
>
  <div
    className="md-avatar-content"
    style={undefined}
  >
    K
  </div>
</div>
`;

exports[`Avatar should correctly apply style and className 1`] = `
<div
  className="md-inline-block md-avatar md-avatar--default test-avatar"
  label="Woop"
  style={
    Object {
      "width": 100,
    }
  }
>
  <div
    className="md-avatar-content"
    style={undefined}
  />
</div>
`;

exports[`Avatar should render as an image when the src prop is provided 1`] = `
<div
  className="md-inline-block md-avatar md-avatar--default"
>
  <img
    alt="some alt"
    className="md-avatar-img"
    role={undefined}
    src="/something.png"
    style={undefined}
  />
</div>
`;

exports[`Avatar should render as an image when the src prop is provided 2`] = `
<div
  className="md-inline-block md-avatar md-avatar--default"
>
  <img
    alt={undefined}
    className="md-avatar-img"
    role="presentation"
    src="/something.png"
    style={undefined}
  />
</div>
`;
